EXTRA_DIST =					\
	README.md				\
	bootstrap.sh

dist_bin_SCRIPTS =				\
	bin/delete-config-drive			\
	bin/detach-config-drive			\
	bin/domain-delete			\
	bin/domain-install			\
	bin/domain-reboot			\
	bin/domain-start			\
	bin/domain-stop				\
	bin/domain-wait-for-state		\
	bin/snapshot-create			\
	bin/snapshot-delete			\
	bin/snapshot-list			\
	bin/snapshot-replace			\
	bin/snapshot-select			\
	bin/upload-file-to-pool

dist_pkglibexec_SCRIPTS =				\
	libexec/kvm-cluster-up/common.sh		\
	libexec/kvm-cluster-up/create-config-drive	\
	libexec/kvm-cluster-up/meta-data		\
	libexec/kvm-cluster-up/user-data
